--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,6 @@ body {
 a {
     text-decoration: none;
     /* color: deeppink; */
-    color: rgb(156, 44, 104);
+    color: rgb(114, 17, 69);
+    font-weight: bold;
 }
