--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -20,6 +20,9 @@
   
       .option {
         padding: 10px 15px;
+        color: rgb(114, 17, 69);
+        font-weight: bold;
+        cursor: pointer;
       }
     }
   }
